--- a/templates/seeAll.html
+++ b/templates/seeAll.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/seall.css') }}">
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/LogoCat.png') }}" > 
     <link rel="icon" type="image/ico" href="./img/LogoCat.ico" >
-    <meta http-equiv="refresh" content="60" />
+
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <title>UFitOps</title> 
