--- a/static/css/seall.css
+++ b/static/css/seall.css
@@ -25,22 +25,21 @@ img{
 
 html,
 body{
-    background: linear-gradient(#7a396d, #e97bd1);
+    background: linear-gradient(#050505, #18181d);
     height: 100vh;
 }
 
 .container{
     width: 100%;
     display: grid;
-    height: 90vh;
-    grid-template-columns: 1.4fr 4fr 2fr;
+    grid-template-columns: 1fr 4fr 2fr;
     background: linear-gradient(#050505, #18181d);;
 }
 
 #fix{
-   
+    height: 100vh;
     padding: 20px 36px;
-    display: block;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
     z-index: 10000;
@@ -49,20 +48,22 @@ body{
    
 }
 
+#fix{
+    background-color: #18181d;
+    position: fixed;
+}
+
 .container .sidebar .logo{
-    padding-top: 30px;
     display: flex;
     align-items: center;
     gap: 6px;
 }
 
-.container .sidebar {
-    background-color: #18181d;
-    padding-right: 30px;
-    padding-left: 30px;
-    width: 100%;
-    height: 90vh;
+.container .sidebar .logo{
+    align-items: center;
+    gap: 6px;
 }
+
 
 .container .sidebar .logo > i{
     font-size: 24px;
@@ -73,12 +74,7 @@ body{
     font-weight: bold;
     transition: all 0.3s ease;
 }
-#fix{
-    /* background-color: #18181d; */
-    padding: 0;
-    margin: 0;
-    position: fixed;
-}
+
 .container .sidebar .logo a:hover,
 .container .sidebar .menu ul li:hover a,
 .container .sidebar .menu ul li:hover i,
@@ -88,7 +84,6 @@ body{
 
 .container .sidebar .menu h5{
     color: #919191;
-    margin-top: 40px;
     margin-bottom: 15px;
     text-transform: uppercase;
 }
@@ -143,7 +138,6 @@ body{
     color: #919191;
 }
 
-
 .container main{
     padding: 20px 36px;
 }
@@ -167,63 +161,6 @@ body{
     border-radius: 8px;
 }
 
-#time_range,
-#time_range-2 {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background: transparent;
-    appearance: none;
-    width: 100%;
-    height: 20px;
-    border: none;
-    margin-left: 5px;
-    margin-right: 5px;
-    border-radius: 4px;
-    overflow: hidden;
-}
-#time_range::-webkit-slider-thumb,
-#time_range-2::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    background-color: #5773ff;
-    border: 0px solid #5773ff;
-    border-radius: 100%;
-    height: 18px;
-    width: 18px;
-    margin-top: -7px;
-    box-shadow: calc(-100vmax - 18px) 0 0 100vmax #374aa9;
-    clip-path: polygon(
-        100% 0,
-        2px 0,
-        0 7px,
-        -100vmax 7px,
-        -100vmax 11px,
-        0 11px,
-        2px 100%,
-        100% 100%
-    );
-}
-
-#time_range::-moz-range-thumb,
-#time_range-2::-moz-range-thumb {
-    -moz-appearance: none;
-    appearance: none;
-    background-color: #f2622d;
-    border: 0px solid #f2622d;
-    border-radius: 50%;
-    height: 18px;
-    width: 18px;
-    margin-top: -7px;
-}
-
-#time_range::-webkit-slider-runnable-track,
-#time_range-2::-webkit-slider-runnable-track {
-    height: 4px;
-    border-radius: 4px;
-    
-    box-shadow: 0px 0px 0px #353535;
-    background: #d7d7d7;
-}
 .container main header .search input{
     width: 100%;
     background-color: transparent;
@@ -232,7 +169,6 @@ body{
     color: #fff;
     margin: 0 auto; 
 }
-
 
 .container main .trending{
     margin-top: 40px;
@@ -269,44 +205,6 @@ body{
     gap: 16px;
 }
 
-.button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-}
-.time{
-    color: #fff;
-}
-
-#thumbnail{
-    width: 5vw;
-    height: 2vw;
-    margin-right: 20px;
-}
-.song-info {
-    display: flex;
-    align-items: center;
-}
-.song-info-text {
-    flex-direction: column;
-}
-
-#song-title, #song-artist {
-    margin: 0;
-    padding: 0;
-    color: #fff;
-}
-
-
-.button i{
-    color: #fff;
-    font-size: 20px;
-    background-color: #5773ff;
-    padding: 10px;
-    border-radius: 50%;
-    font-size: 18px;
-}
 .container main .trending .left .info .buttons button{
     padding: 12px 16px;
     background-color: #5773ff;
@@ -335,37 +233,13 @@ body{
     display: flex;
     gap: 20px;
 }
-audio {
-    border-radius: 90px;
-    width: 250px;
-    height: 45px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    background-color: #32323d;
-    }
-    
-    audio::-webkit-media-controls-mute-button {
-   background-color: #0d4045;
-    }
-    
-    audio::-webkit-media-controls-volume-slider {
-    display: none;
-    }
-    
-    audio::-webkit-media-controls-volume-control-container.closed {
-    display: none !important;
-    }
-    audio::-webkit-media-controls-volume-control-container{
-    display: none !important;
-    }
+
 .container main .playlist .genres{
-    margin-top: 40px;
     color: #fff;
     background-color: #202026;
-    padding: 30px 50px 30px 50px;
+    padding: 20px;
     border-radius: 6px;
-    width: 100%;
-    padding-bottom: 45px ;
+    width: 40%;
 }
 
 .container main .playlist .genres .header,
@@ -375,21 +249,9 @@ audio {
     justify-content: space-between;
     margin-bottom: 30px;
 }
-.right-section .music-list .header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 20px;
-    padding-top: 10px;
-    padding-bottom: 20px;
-}
 
 .container main .playlist .genres .header a,
 .container main .playlist .music-list .header a{
-    color: #919191;
-    font-size: 12px;
-}
-.right-section .music-list .header a{
     color: #919191;
     font-size: 12px;
 }
@@ -400,124 +262,93 @@ audio {
 
 .container main .playlist .genres .items{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);   
-    gap: 15px;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
 }
 
-/**/
-.container main .playlist .genres .items .item {
-    position: relative;
+.container main .playlist .genres .items .item{
     padding: 22px 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 6px;
     cursor: pointer;
-    font-weight: bold;
-    background-color: rgba(255, 255, 255, 0.1);
 }
 
-.container main .playlist .genres .items .item p {
+.container main .playlist .genres .items .item p{
     font-size: 14px;
     font-weight: bold;
-    position: relative;
-    color: #ffffffe1;
-    text-align: center;
-    margin: 0;
-    /* margin-bottom: 20px; */
-}
-
-.container main .playlist .genres .items .item::before {
-    content: '';
-    position: absolute;
-    top: 15px;
-    left: 60px;
-    right: 60px;
-    bottom: 15px;
-    background-color: rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(2px);
-    border-radius: 10px;
 }
 
 .container main .playlist .genres .items .item:nth-child(1){
-    background-image: url('../img/genres/electro_pop.jpg');
+    background-color: #476a8a;
 }
 
 .container main .playlist .genres .items .item:nth-child(2){
-    background-image: url('../img/genres/dance_beeat.png');
+    background-color: #a69984;
 }
 
 .container main .playlist .genres .items .item:nth-child(3){
-    background-image: url('../img/genres/clubhouse.jpg');
-    background-position: center;
+    background-color: #a24c34;
 }
 
 .container main .playlist .genres .items .item:nth-child(4){
-    background-image: url('../img/genres/hiphop_rap.png');
-    background-position: center;
+    background-color: #0d4045;
 }
 
 .container main .playlist .genres .items .item:nth-child(5){
-    background-image: url('../img/genres/alternative_indie.png');
+    background-color: #a67894;
 }
 
 .container main .playlist .genres .items .item:nth-child(6){
-    background-image: url('../img/genres/classical.jpg');
-    background-position: center;
+    background-color: #5547a5;
 }
 
-
-.right-section .music-list {
+.container main .playlist .music-list{
     background-color: #202026;
     padding: 20px;
     color: #fff;
-    border-radius:  6px;
-    width: 100%;
+    border-radius: 6px;
+    width: 65%;
 }
 
 
-.right-section .music-list .items .item {
+.container main .playlist .music-list .items .item{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 15px;
-    padding-bottom: 10px;
+    margin-bottom: 20px;
 }
 
-.right-section .music-list .items .item:last-child{
+.container main .playlist .music-list .items .item:last-child{
     margin-bottom: 0;
 }
 
-.right-section .music-list .items .item .info,
-.right-section .music-list .items .item .actions{
+.container main .playlist .music-list .items .item .info,
+.container main .playlist .music-list .items .item .actions{
     display: flex;
     align-items: center;
-    gap:20px;
+    gap: 20px;
 }
 
-
-.right-section .music-list .items .item .info p{
+.container main .playlist .music-list .items .item .info p{
     color: #919191;
     font-size: 12px;
     font-weight: bold;
     margin-top: 6px;
 }
 
-
-.right-section .music-list .items .item .info img{
+.container main .playlist .music-list .items .item .info img{
     width: 50px;
     height: 50px;
 }
 
-
-.right-section .music-list .items .item .actions p{
+.container main .playlist .music-list .items .item .actions p{
     font-size: 13px;
     font-weight: bold;
 }
 
-
-
-.right-section .music-list .tems .item .actions .icon{
+.container main .playlist .music-list .items .item .actions .icon{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -527,14 +358,15 @@ audio {
     border-radius: 6px;
 }
 
-
-.right-section .music-list .items .item .actions .icon i{
-    color:#5773ff;
+.container main .playlist .music-list .items .item .actions .icon i{
+    font-size: 10px;
+    color: #5773ff;
 }
 
-.right-section .music-list .items .item .actions i{
+.container main .playlist .music-list .items .item .actions i{
     color: #919191;
 }
+
 .container .right-section{
     padding: 20px 36px 20px 0;
 }
@@ -554,7 +386,7 @@ audio {
 .container .right-section .profile .user .left{
     display: flex;
     align-items: center;
-    /* background: #32323d; */
+    background: #32323d;
     padding: 6px;
     border-radius: 6px 0 0 6px;
 }
@@ -565,7 +397,7 @@ audio {
 }
 
 .container .right-section .profile .user .right{
-    /* background-color: #25252d; */
+    background-color: #25252d;
     border-radius: 0 6px 6px 0;
     padding: 13px;
     color: #fff;
@@ -628,14 +460,13 @@ audio {
     margin: 10px 0;
 }
 
-
-
 .container .right-section .music-player .song-info .progress p{
     font-size: 11px;
 }
 
 .container .right-section .music-player .song-info .progress .active-line{
     position: relative;
+    width: 120px;
     height: 2px;
     background-color: #fff;
     margin-left: 30px;
@@ -661,9 +492,41 @@ audio {
     border-radius: 50%;
 }
 
+.container .right-section .music-player .player-actions{
+    background-color: #5773ff;
+    height: 26%;
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
 
+.container .right-section .music-player .player-actions .buttons{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    margin-top: 24px;
+}
 
+.container .right-section .music-player .player-actions .buttons i{
+    font-size: 10px;
+}
 
+.container .right-section .music-player .player-actions .buttons .play-button{
+    padding: 16px;
+    background-color: #fff;
+    color: #5773ff;
+    border-radius: 18px;
+}
+
+.container .right-section .music-player .player-actions .lyrics{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    bottom: 8px;
+}
 
 .container main header  button,
 .container .sidebar .logo button{
@@ -677,22 +540,8 @@ audio {
     border-radius: 8px;
     cursor: pointer;
 }
-.grid{
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    height: 40px;
-}
-.control-panel {
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #32323d;
-   
-    z-index: 9999;
-}
 
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1400px) {
     
     .container .sidebar .playing .bottom p{
         font-size: 10px;
@@ -763,10 +612,7 @@ audio {
         display: none;
     }
 
-    .container main .playlist {
-        width: 100%;
-    }
-    .right-section .music-list {
+    .container main .playlist .music-list{
         width: 100%;
     }
     
@@ -802,7 +648,6 @@ audio {
     .container .right-section .music-player .player-actions .buttons{
         margin-top: 30px;
     }
-
 
     .container .right-section .music-player .player-actions .buttons .play-button{
         padding: 10px;
@@ -902,14 +747,11 @@ audio {
         height: 100%;
     }
 
-
-   
-    
-    .song-info-text  h5{
-        
-        color:#fff;
-        font-weight: bold;
+    .container .right-section .music-player .song-info img{
+        width: 300px;
+        height: 190px;
     }
+
     .container .right-section .music-player .buttons i{
         font-size: 22px;
     }
